@@ -26,6 +26,8 @@ IMPROVEMENTS
  
 BUG FIXES
 
+PIG-4329: Fetch optimization should be disabled when limit is not pushed up (lbendig via cheolsoo)
+
 PIG-3413: JsonLoader fails the pig job in case of malformed json input (eyal via daijy)
 
 PIG-4247: S3 properties are not picked up from core-site.xml in local mode (cheolsoo)
